--- a/templates/index.html
+++ b/templates/index.html
@@ -13,51 +13,52 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- My CSS -->
     <link href="{{ url_for('static', filename='css/pane.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/cont.css') }}" rel="stylesheet">
 
-    <title>{{ title }}</title>
+    <title>hello</title>
   </head>
   <body>
         <!-- <div class="container"> -->
-        <div class=" container">
-            <!--<h1>{{ title }}</h1>
-            <ul>
-                {% for member in members: %}
-                    <li>{{ member }}</li>
-                {% endfor %}
-            </ul>-->
-
-            <div id="game-window">
-                <div class="pane">
-                  <div class="ab p1" id="waku1">くいくいタイパー</div>
-                  <div class="ab p1"></div>
-                  <div class="ab p1" id="waku2">Unknown</div>
-                </div>
-                <div class="pane">
-                  <span class="p2" id="waku3"> history history history history history history</span>
-                  <br>
-                  <input class="p2 user-input"></input>
-                </div>
-                <div class="pane" id="waku4">3</div>
-                <div class="pane">
-                  <span class="p3"></span>
-                  <input class="p3 user-input"></input>
-                  <br><span class="p3" id="waku5">others<br>others<br></span>
-                  <!--<button id="ajax">Ajax通信</button>
-                  <div class="result"></div>-->
-                </div>
-                <div class="pane" id="waku6">5</div>
-
-                
-            </div>
-
-            <!-- Option 1: Bootstrap Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-            <!-- my js -->
-            <script src="{{ url_for('static', filename='js/storage.js') }}"></script>
-            <script src="{{ url_for('static', filename='js/ping.js') }}"></script>
-            <script src="{{ url_for('static', filename='js/input.js') }}"></script>
-        </div>
-  </body>
+		<div class="container">
+			<div class="row">
+				<div class="pane" id="p1">
+					<h1>くいくいタイパー</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-5 pane" id="p2">
+					<div>One of three columns</div>
+					<input class="user-input"></input>
+				</div>
+				<div class="col-md-7 pane" id="p3">
+					<div>輝くもの必ずしも金ならず</div>
+					<input class="user-input"></input>
+					<div>
+						120 bot-kawasaki:<br>
+						輝くもの必ずしも金ならず<br>
+						120 bot-kawasaki:<br>
+						輝くもの必ずしも金ならず<br>
+						120 bot-kawasaki:<br>
+						輝くもの必ずしも金ならず<br>
+						120 bot-kawasaki:<br>
+						輝くもの必ずしも金ならず<br>
+						120 bot-kawasaki:<br>
+						輝くもの必ずしも金ならず<br>
+						120 bot-kawasaki:<br>
+						輝くもの必ずしも金ならず<br>
+						120 bot-kawasaki:<br>
+						輝くもの必ずしも金ならず<br>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- Option 1: Bootstrap Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+		<!-- my js -->
+		<script src="{{ url_for('static', filename='js/pane.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/input.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/process_0.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/process_1.js') }}"></script>
+	</body>
 </html>
