増殖するコマンド入力ゾーン。しかしinput.jsの指定がeq()を使ってるせいで新しく生成された入力ゾーンにはkeydownなどが効いていない。これを解決すべくinput.jsのセレクタ指定のやりかたをidに変えたいと思う。ってかhtmlでid指定しなきゃね。

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,13 @@
 			</div>
 			<div class="row">
 				<div class="col-md-5 pane" id="p2">
-					<div>One of three columns</div>
-					<input class="user-input"></input>
+					<div>
+						長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明
+					</div>
+					<div>
+						<span class="green-name">mimi</span>: 
+						<input class="user-input"></input>
+					</div>
 				</div>
 				<div class="col-md-7 pane" id="p3">
 					<div>輝くもの必ずしも金ならず</div>
