--- a/templates/index.html
+++ b/templates/index.html
@@ -29,14 +29,14 @@
 					<div>
 						長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明
 					</div>
-					<div>
+					<!--<div>
 						<span class="green-name">mimi</span>: 
-						<input class="user-input"></input>
-					</div>
+						<input class="user-input input-ue"></input>
+					</div>-->
 				</div>
 				<div class="col-md-7 pane" id="p3">
 					<div>輝くもの必ずしも金ならず</div>
-					<input class="user-input"></input>
+					<input class="user-input input-shita"></input>
 					<div>
 						120 bot-kawasaki:<br>
 						輝くもの必ずしも金ならず<br>
