--- a/static/css/pane.css
+++ b/static/css/pane.css
@@ -14,7 +14,7 @@ body{
 .green-name{
 	color: #67F86F;
 }
-
+/*
 #p1{
 	background-color: #f17a7a31;
 }
@@ -24,7 +24,7 @@ body{
 #p3{
 	background-color: #b0f5bb32;
 }
-
+*/
 .user-input{
 	color: #eee;
 	background-color: #3f3f3f;
