Ctrl+Enterで送信する案を廃止して、wipコマンドで自動判定しようと思う。次のブランチからは。それにあたって、js側からもいっぱい変更しないと行けない。

--- a/static/css/pane.css
+++ b/static/css/pane.css
@@ -27,7 +27,7 @@ body{
 */
 .user-input{
 	color: #eee;
-	background-color: #3f3f3f;
+	background-color: #3f3f3f00;
 	caret-color: pink;
 	/*caret-shape: block;*/
 	border: none;
