--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <!-- My CSS -->
     <link href="{{ url_for('static', filename='css/pane.css') }}" rel="stylesheet">
 
-    <title>hello</title>
+    <title>くいくいタイパー | 友達/botとリアルタイム対戦！</title>
   </head>
   <body>
         <!-- <div class="container"> -->
