--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- My CSS -->
-    <link href="{{ url_for('static', filename='css/pane.css') }}" rel="stylesheet">
-
-    <title>くいくいタイパー | 友達/botとリアルタイム対戦！</title>
-  </head>
-  <body>
-        <!-- <div class="container"> -->
-		<div class="container">
-			<div class="row">
-				<div class="pane" id="p1">
-					<h1>くいくいタイパー</h1>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-5 pane" id="p2">
-					<!--<div>
-						長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明長い説明
-					</div>
-					<div>
-						<span class="green-name">mimi</span>: 
-						<input class="user-input input-ue"></input>
-					</div>-->
-				</div>
-				<div class="col-md-7 pane" id="p3">
-					<!--
-					<div>輝くもの必ずしも金ならず</div>
-					<input class="user-input input-shita"></input>
-					<div>
-						120 bot-kawasaki:<br>
-						輝くもの必ずしも金ならず<br>
-					</div>
-					-->
-				</div>
-			</div>
-		</div>
-		
-		<!-- Option 1: Bootstrap Bundle with Popper -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-		<!-- my js -->
-		<script src="{{ url_for('static', filename='js/pane.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/input.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/process_0.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/process_1.js') }}"></script>
-	</body>
-</html>
+<h1>Welcome to ketcha.xyz</h1>
+<div>links:</div>
+<ul>
+	<li><a href="./cuicui">くいくいタイパー</a> </li>
+</ul>
