--- a/templates/cuicui.html
+++ b/templates/cuicui.html
@@ -21,7 +21,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="pane" id="p1">
-					<h1>くいくいタイパー</h1>
+					<h1>くいくいタイパー(sleepけし)</h1>
 				</div>
 			</div>
 			<div class="row">
