--- a/templates/cuicui.html
+++ b/templates/cuicui.html
@@ -9,8 +9,8 @@
 	<!-- 共通設定 -->
 	<meta property="og:title" content="くいくいタイパー">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="表示したいページのURL（絶対パス）">
-	<meta property="og:image" content="表示したい画像のURL（絶対パス）">
+	<meta property="og:url" content="https://www.ketcha.xyz/cuicui">
+	<meta property="og:image" content="https://raw.githubusercontent.com/oha-Ohashi/cuicui/main/media/cuicui_ogp.png">
 	<!-- 以下省略可能ですが、site_name, description, localeは載せたほうがいいです。 -->
 	<meta property="og:site_name" content="くいくいタイパー">
 	<meta property="og:description" content="友達とリアルタイム対戦できることがウリの、CUIライクタイピングゲーム！！">
