俺たち、入れ替わってる？？？

--- a/templates/ortho_heat.html
+++ b/templates/ortho_heat.html
@@ -7,7 +7,7 @@
 
 	<head prefix="og: http://ogp.me/ns#">
 	<!-- 共通設定 -->
-	<meta property="og:title" content="くいくいタイパー">
+	<meta property="og:title" content="Ortho Heat">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://www.ketcha.xyz/ortho_heat">
 	<meta property="og:image" content="https://raw.githubusercontent.com/oha-Ohashi/cuicui/main/media/ortho_heat_ogp.png">
