--- a/templates/ortho_heat.html
+++ b/templates/ortho_heat.html
@@ -7,12 +7,12 @@
 
 	<head prefix="og: http://ogp.me/ns#">
 	<!-- 共通設定 -->
-	<meta property="og:title" content="オルソリひーと|Ortho Heat">
+	<meta property="og:title" content="オルソリひーと | Ortho Heat">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://www.ketcha.xyz/ortho_heat">
 	<meta property="og:image" content="https://raw.githubusercontent.com/oha-Ohashi/cuicui/main/media/ortho_heat_ogp.png">
 	<!-- 以下省略可能ですが、site_name, description, localeは載せたほうがいいです。 -->
-	<meta property="og:site_name" content="オルソリひーと|Ortho Heat">
+	<meta property="og:site_name" content="オルソリひーと | Ortho Heat">
 	<meta property="og:description" content="キミのオルソリニアキーボードでヒートマップを作ろう！ | Create a heatmap with your ortho-linear keyboard!">
 	<meta property="og:locale" content="en_EN">
 	<!-- /共通設定 -->
@@ -32,13 +32,13 @@
     <!-- My CSS -->
     <link href="{{ url_for('static', filename='ortho_heat/ortho_heat.css') }}" rel="stylesheet">
 
-    <title>オルソリひーと|Ortho Heat | Create a heatmap with your ortho-linear keyboard</title>
+    <title>オルソリひーと | Ortho Heat | Create a heatmap with your ortho-linear keyboard</title>
   </head>
   <body>
         <!-- <div class="container"> -->
 		<div class="wrap">
 			<header>
-				<h1>Ortho Heat</h1>
+				<h1>オルソリひーと | Ortho Heat</h1>
 			</header>
 			<main class="container kojika-container">
 				<div class="heat-box heatmap">
