--- a/templates/ortho_typing.html
+++ b/templates/ortho_typing.html
@@ -13,7 +13,7 @@
 	<meta property="og:image" content="https://raw.githubusercontent.com/oha-Ohashi/cuicui/main/media/ortho_fall_ogp.png">
 	<!-- 以下省略可能ですが、site_name, description, localeは載せたほうがいいです。 -->
 	<meta property="og:site_name" content="オルソリふぉーる | Ortho Fall">
-	<meta property="og:description" content="新しい論理配列に慣れよう。 |  Train yourself with your key layout.">
+	<meta property="og:description" content="新しい論理配列に慣れよう。 |  Train yourself with your new layout.">
 	<meta property="og:locale" content="en_EN">
 	<!-- /共通設定 -->
 	<!-- Twitterの設定 -->
