--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,6 @@
 <div>links:</div>
 <ul>
 	<li><a href="./cuicui">くいくいタイパー</a> </li>
-	<li><a href="./ortho_heat">Ortho Heat</a> </li>
+	<li><a href="./ortho_heat">オルソリひーと | Ortho Heat</a> </li>
+	<li><a href="./ortho_typing">オルソリふぉーる | Ortho Fall</a> </li>
 </ul>
