--- a/templates/ortho_typing.html
+++ b/templates/ortho_typing.html
@@ -86,7 +86,7 @@
 				</div>
 
 				<div class="mod">
-					<label for="formRange1" class="range-label"><h4>Speed: <span>3</span></h4></label>
+					<label for="formRange1" class="range-label"><h4>Level: <span>3</span></h4></label>
 					<input type="range" class="form-range" id="formRange1" min="1" max="5" step="1" value="3">
 				</div>
 				<div class="mod layout-mod">
