--- a/templates/ortho_heat.html
+++ b/templates/ortho_heat.html
@@ -85,6 +85,7 @@
 						<button class="btn btn-outline-primary active">QWERTY</button>
 						<button class="btn btn-outline-primary">ABCDEF</button>
 						<button class="btn btn-outline-primary">Dvorak</button>
+						<button class="btn btn-outline-primary">Colemak-DH</button>
 						<button class="btn btn-outline-primary">Eucalyn</button>
 						<button class="btn btn-outline-primary">Ohashi rev1</button>
 						<button class="btn btn-outline-primary">Ohashi rev2</button>
